# replicatedLog

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  start_replicated_log.sh
proto/: replicate.proto
src/: CMakeLists.txt  HealthMonitor.cpp  HealthMonitor.h  Logger.hpp  crow_all.h  grpc_request.cpp  grpc_request.hpp  main.cpp  params.cpp  params.hpp
src/tclap/: CMakeLists.txt
test_scripts/: get_health.ps1  get_msg.ps1  post_msg.ps1
